--- a/lesson1and2/Makefile
+++ b/lesson1and2/Makefile
@@ -10,4 +10,18 @@ publish:
 package-install:
 	python3 -m pip install --user dist/*.whl
 
-	poetry run brain-games
+brain-calc:
+	poetry run brain-calc
+
+brain-gcd:
+	poetry run brain-gcd
+
+brain-progression:
+	poetry run brain-progression
+
+brain-prime:
+	poetry run brain-prime
+
+lint:
+	poetry run flake8 brain_games
+
